# vibe_typeless

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI_POSTPROCESS_GUIDE.md  AI_QUICKSTART.md  CLAUDE.md  MODEL_SWITCH_IMPLEMENTATION.md  MONITORING_DESIGN.md  OLLAMA_SETUP.md  PROGRESS.md  README.md  SECURITY.md  TESTING_GUIDE.md  VIBEVOICE_FIX_SUMMARY.md  start-all.sh  stop-all.sh  test_vibevoice_audio.py
PythonService/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_IMPROVEMENTS_SUMMARY.md  CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DOCKER.md  Dockerfile  LOCAL_DEPLOYMENT.md  NEXT_STEPS.md  PERFORMANCE.md  PROGRESS.md  QUICKSTART.md  TEST_RESULTS.md  benchmark.py  benchmark.sh  cleanup_old_cache.sh  demo_api_improvements.py  demo_long_audio.py  demo_model_management.py  demo_pipeline.py  demo_sensevoice.py  diagnose_vibevoice.py  docker-compose.yml  docker-start.sh  docker-stop.sh  long_test_monitor.py  main.py  migrate_runtime.sh  pyproject.toml  start.sh  stop.sh  test_ai_postprocess.py  test_audio_upload.py  test_both_models.py  test_comparison.py  test_deployment.sh  test_docker.sh  (+12 more)
PythonService/docs/: API_IMPROVEMENTS.md  LONG_AUDIO_FEATURE.md  MODEL_SWITCH_GUIDE.md
PythonService/runtime/models/: hotwords.txt
PythonService/scripts/: check_sensitive_patterns.py  download_sensevoice.sh  test_opus_support.py
PythonService/src/: config.py  version.py
PythonService/src/api/: auth.py  job_queue.py  rate_limit.py  (+3 more)
PythonService/tests/: test_api_complete.py  test_api_improvements.py  test_api_routes.py  test_asr.py  test_asr_model.py  test_audio_processor.py  test_cloud_llm.py  test_dictionary.py  test_long_audio.py  test_model_config.py  test_postprocess.py  test_punctuation.py  test_sensevoice_model.py  test_text_processor.py  test_whisper_model.py
(+59 files in other folders)
