[project]
name = "typeless-service"
version = "0.1.0"
description = "Typeless ASR and AI-powered text post-processing service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
src = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
